chore: update and bug fix
